initial compileing/working with buffer